--- a/index.html
+++ b/index.html
@@ -8,6 +8,61 @@
   <style>
     body {
       background: rgb(186, 186, 186);
+      margin: 0;
+      padding: 0;
+    }
+    
+    .image-container {
+      display: flex;
+      justify-content: center;
+      gap: 2rem;
+      margin: 2rem 0;
+      flex-wrap: wrap;
+    }
+
+    .image-container img {
+      max-width: 400px;
+      height: auto;
+      border-radius: 8px;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+      transition: transform 0.3s ease;
+    }
+
+    .image-container img:hover {
+      transform: scale(1.05);
+    }
+
+    .navbar {
+      background-color: #233b6c;
+      padding: 1rem;
+      position: sticky;
+      top: 0;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    }
+
+    .nav-links {
+      display: flex;
+      justify-content: center;
+      gap: 2rem;
+      list-style: none;
+      margin: 0;
+      padding: 0;
+    }
+
+    .nav-links a {
+      color: white;
+      text-decoration: none;
+      font-size: 1.1rem;
+      transition: all 0.3s ease;
+    }
+
+    .nav-links a:hover {
+      color: rgb(186, 186, 186);
+      font-size: 1.2rem;
+    }
+
+    .content {
+      padding: 2rem;
     }
 
     h1,
@@ -23,33 +78,43 @@
       line-height: 1.6;
     }
 
-    a {
+    .university-link {
       font-size: 1.5rem;
       display: block;
       text-align: center;
       text-decoration: none;
       color: rgb(22, 61, 106);
       transition: all 0.3s ease;
+      margin-top: 2rem;
     }
 
-    /* Hover effect */
-    a:hover {
+    .university-link:hover {
       color: rgb(9, 1, 1);
       font-size: 1.6rem;
     }
   </style>
 </head>
 <body>
-  <h1>Elian Echavarria</h1>
-  <h2>Interesting Facts About Me</h2>
+  <nav class="navbar">
+    <ul class="nav-links">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="myUniversity.html">University</a></li>
+        <li><a href="resume.html">Resume</a></li>
+    </ul>
+  </nav>
 
-  <ul>
+  <div class="content">
+    <h1>Elian Echavarria</h1>
+    <h2>Interesting Facts About Me</h2>
+
+    <ul>
     <li>I like playing Basketball.</li>
     <li>I'm a big fan of The Flash, the TV Show.</li>
     <li>I enjoy playing Video Games.</li>
     <li>I enjoy solving Leetcode Questions.</li>
   </ul>
 
-  <a href="myUniversity.html">My University</a>
+    
+  </div>
 </body>
 </html>
