--- a/myUniversity.html
+++ b/myUniversity.html
@@ -42,10 +42,63 @@
       text-align: justify;
     }
 
+     a {
+      font-size: 1.5rem;
+      display: block;
+      text-align: center;
+      text-decoration: none;
+      color: rgb(22, 61, 106);
+      transition: all 0.3s ease;
+    }
+
+    /* Hover effect */
+    a:hover {
+      color: rgb(9, 1, 1);
+      font-size: 1.6rem;
+    }
+
+     .navbar {
+            background-color: #233b6c;
+            padding: 1rem;
+            position: sticky;
+            top: 0;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+            z-index: 10;
+        }
+
+        .nav-links {
+            display: flex;
+            justify-content: center;
+            gap: 2rem;
+            list-style: none;
+            margin: 0;
+            padding: 0;
+        }
+
+        .nav-links a {
+            color: white;
+            text-decoration: none;
+            font-size: 1.1rem;
+            transition: all 0.2s ease;
+        }
+
+        .nav-links a:hover,
+        .nav-links a[aria-current="page"] {
+            color: rgb(186, 186, 186);
+            font-size: 1.2rem;
+        }
+
     
   </style>
 </head>
 <body>
+     <nav class="navbar">
+        <ul class="nav-links">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="resume.html" aria-current="page">Resume</a></li>
+            <li><a href="myUniversity.html">University</a></li>
+        </ul>
+    </nav>
   <div class="container">
     <h1>Borough of Manhattan Community College</h1>
     <h2>About My University</h2>
